# monarca_solana

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  plantilla-env.txt  tsconfig.json
docs/: VERIFIED_BUILD_PROGRAM.md
idl/: monarca_solana.json
programs/qrypta_solana/: Cargo.toml
scripts/: INFORME-COMPROBACIONES.txt  METADATA_URI.txt  abrir-verificacion-token-solana.ps1  actualizar-uri-metadata-solana.ts  anchor-build-admin.ps1  burn-tokens-spl.ts  comparar-token-con-referencia.ts  comparar-tokens-jupiter-api.ts  comparar-tokens-solscan-api.ts  completar-entorno-solana.ps1  comprobar-argumento-phantom.ts  comprobar-liquidez-ref-vs-mnca.ts  configurar-wallet-integracion.ps1  crear-pool-raydium-mnca-sol.ts  crear-pool-raydium-mnca-usdc.ts  crear-token-spl.ts  create-metadata-solana.ts  desplegar-mnca-una-sola-vez.ts  desplegar-solana-completo.ps1  desplegar-solana-mainnet.ps1  desplegar-solana.ps1  desplegar-spl-mainnet.ps1  desplegar-todo-spl-mainnet.ps1  desplegar-wsl.ps1  desplegar-wsl.sh  ejecutar-automatizacion-completa.ps1  ejecutar-comprobaciones-y-informe.ts  ejecutar-todas-comprobaciones.ps1  ejecutar-verified-build-completo.ps1  fijar-metadata-inmutable-solana.ts  gasto-solana-real.ts  generar-informe-diferencias-reales.ts  get-program-hash-rpc.ts  hacer-token-visible.ts  import-phantom-wallet.ts  initialize-mint-solana.ts  instalar-solana-anchor.ps1  instalar-y-configurar-verified-build.ps1  jupiter-validated-mnca-line.csv  listo-y-desplegar-solana.ps1  (+24 more)
tests/: monarca_solana.ts
(+1 files in other folders)
