[workspace]
members = [
    "programs/monarca_solana"
]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = "z"     # Optimizar por tamaño (reduce rent ~20-40%)
lto = true
codegen-units = 1

# Fijar blake3 < 1.8: la 1.8+ requiere edition2024 no disponible en el toolchain Solana
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.7.0" }
