[package]
name = "monarca_solana"
version = "0.1.0"
description = "Programa del token MONARCA (MNCA) en Solana (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monarca_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token"] }
